# Icecove

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  demo-agent.tape  demo.tape
demo/docs/.alcove/: policy.toml
demo/docs/my-api/: ARCHITECTURE.md  DECISIONS.md
demo/docs/my-app/: ARCHITECTURE.md  DECISIONS.md
docs/: README.de.md  README.es.md  README.fr.md  README.hi.md  README.ja.md  README.ko.md  README.pt-BR.md  README.ru.md  README.zh-CN.md
locales/: de.toml  en.toml  es.toml  fr.toml  hi.toml  ja.toml  ko.toml  pt-BR.toml  ru.toml  zh-CN.toml
scripts/: install.sh
skill/: SKILL.md
src/: cli.rs  config.rs  index.rs  main.rs  mcp.rs  policy.rs  tools.rs
template/: ARCHITECTURE.md  CONVENTIONS.md  DEBT.md  DECISIONS.md  PRD.md  PROGRESS.md  README.md  SECRETS_MAP.md
